feat: support native monitoring across platforms